# odys

./: .dockerignore  .env.vps  .gitignore  .gitmodules  .odys_pids.json  DESIGN.md  Dockerfile  PRODUCT.md  README.md  app.py  docker-compose.yml  gate.yaml  launcher.py  odys  odys.bat  odys.py  odys_entry.py  pyproject.toml  requirements.txt
cli/: __init__.py  audio.py  bridge.py  doctor.py  entry.py  help_cmd.py  install.py  server.py  start_stop.py  status.py  tray.py  utils.py
core/: __init__.py  auth.py  database.py  datetime_utils.py  db_base.py  db_migrations.py  db_models.py  exceptions.py  middleware.py  session_manager.py
desktop_bridge/: app_paths.py  app_registry.py  apps.json  desktop_bridge.py  launch-bridge.bat  requirements.txt
desktop_tray/: tray_agent.py  wake_word.py
docs/: prd-headroom-integration.md
routes/: assistant_routes.py  auth_routes.py  bridge_routes.py  chat_routes.py  compare_routes.py  cookbook_routes.py  email_pollers.py  email_routes.py  gallery_routes.py  model_routes.py  odys_council_routes.py  odys_home_routes.py  odys_neuron_routes.py  odys_projects_routes.py  research_routes.py  upload_routes.py  vault_routes.py
scripts/: add_hwfit_models.py  import_from_vllm_recipes.py  setup_ecc_skills.py
services/: odys_council_service.py  odys_home_service.py  odys_neuron_db.py  odys_neuron_embed.py  odys_neuron_hooks.py  odys_neuron_service.py  odys_projects_service.py  odys_vault.py
src/: agent_loop.py  agent_runs.py  app_helpers.py  app_lifespan.py  app_routes.py  caldav_sync.py  chat_processor.py  constants.py  event_bus.py  (+12 more)
(+234 files in other folders)
