[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "odys"
version = "1.0.0"
description = "Odys — Self-hosted AI operating layer"
requires-python = ">=3.11"

[project.scripts]
odys = "odys_entry:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "area_security: tests covering auth, owner-scope, SSRF, XSS, confinement, redaction",
    "area_routes: tests covering HTTP route / API behavior",
    "area_services: tests covering service-layer behavior (llm, cookbook, email, calendar, ...)",
    "area_cli: tests covering CLI / script behavior",
    "area_js: JavaScript / Node-backed tests",
    "area_helpers: self-tests for the shared test helpers in tests/helpers/",
    "area_unit: pure parser / utility tests that do not clearly belong elsewhere",
    "area_uncategorized: tests not yet matched by the taxonomy (fallback)",
    "slow: opt-in marker for known-slow tests; excluded by the fast lane (not slow)",
]
